--- a/index.html
+++ b/index.html
@@ -9,7 +9,59 @@
     <title>Resume Generator</title>
 </head>
 <body>
-    
+    <div class="container">
+        <h1 class="text-center my-2"> Resume Fenerator</h1>
+        <div class="row">
+            <div class="col-md-6">
+                <!-- first col  -->
+                <h3>Personal Information</h3>
+                <div class="form-group">
+                    <label for="namefield" >Your Name</label>
+                    <input type="text" id="namefield" placeholder="Enter Hare" class="form-control">
+                </div>
+
+                <div class="form-group mt-2">
+                    <label for="contactfield" >Your Phone Number</label>
+                    <input type="text" id="contactfield" placeholder="Enter Hare" class="form-control">
+                </div>
+
+                <div class="form-group mt-2">
+                    <label for="addressfield" >Your Address</label>
+                    <textarea id="addressfield" placeholder="Enter Hare" class="form-control"></textarea>
+                </div>
+
+
+                <p class="text-secondary my-3">Important Links</p>
+
+                <div class="form-group mt-2">
+                    <label for="fbfield" >Facebook Link</label>
+                    <input type="text" id="fbfield" placeholder="Enter Hare" class="form-control">
+                </div>
+                <div class="form-group mt-2">
+                    <label for="instafield" >Instagram Link</label>
+                    <input type="text" id="instafield" placeholder="Enter Hare" class="form-control">
+                </div>
+                <div class="form-group mt-2">
+                    <label for="linkdinfield" >Linkdin Link</label>
+                    <input type="text" id="linkdinfield" placeholder="Enter Hare" class="form-control">
+                </div>
+            </div>
+            <div class="col-md-6">
+                <!-- second col  -->
+                <h3>Professional Information</h3>
+
+                <div class="form-group mt-2">
+                    <label for="" >Objective</label>
+                    <textarea  placeholder="Enter Hare" class="form-control"></textarea>
+                </div>
+
+                <div class="form-group mt-2">
+                    <label for="" >Work Experience</label>
+                    <textarea  placeholder="Enter Hare" class="form-control wefield"></textarea>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <script src="./script.js"></script>
