--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center my-2"> Resume Fenerator</h1>
+        <h1 class="text-center my-2"> Resume Generator</h1>
         <div class="row">
             <div class="col-md-6">
                 <!-- first col  -->
