--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container" id="cv-form">
         <h1 class="text-center my-2"> Resume Generator</h1>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 mt-4">
                 <!-- first col  -->
                 <h3>Personal Information</h3>
                 <div class="form-group">
@@ -46,7 +46,7 @@
                     <input type="text" id="linkedfield" placeholder="Enter Hare" class="form-control">
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-6 mt-4">
                 <!-- second col  -->
                 <h3>Professional Information</h3>
 
